Tools-app/keycloak/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: tools-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-server
  template:
    metadata:
      labels:
        app: keycloak-server
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:latest
          ports:
            - containerPort: 8080
