Tools-app/keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: tools-app
  labels:
    name: keycloak-server
spec:
  selector:
    app: keycloak-server
  ports:
    - port: 8080
      targetPort: 8080
